# rinha_2026

./: .dockerignore  .gitattributes  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.mmap  info.json  nginx.conf
.github/workflows/: publish-image.yml
examples/: debug_simd.rs  fraud_score_bench.rs  leaf_size_bench.rs  simd_distance_bench.rs  verify_simd.rs
nginx/: nginx.conf
scripts/: generate-centroid-mmap.sh
src/: app.rs  detection.rs  lib.rs  main.rs  model.rs  telemetry.rs
src/detection/: clustering.rs  engine.rs  loader.rs  math.rs  mod.rs  search.rs  shared.rs  simd.rs  topk.rs  vectorize.rs
src/server/: http1.rs  json.rs  mod.rs
tests/: real_payloads.rs
tests/fixtures/: example-payloads.json
