[package]
name = "rinha_2026"
version = "0.1.0"
edition = "2024"
default-run = "rinha_2026"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "net", "signal"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

flate2 = "1"
vicinity = "0.6"
innr = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

metrics = "0.24"
metrics_printer = "0.2"
metrics-util = "0.19"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
