[package]
name = "rinha_2026"
version = "0.1.0"
edition = "2024"
default-run = "rinha_2026"

[dependencies]
thiserror = "2"
monoio = "0.2"
ctrlc = { version = "3", features = ["termination"] }

serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"

flate2 = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
